fixed sessions
